--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <meta name="description" content="A multi-filtering application built with React and Vite" />
+    <meta name="keywords" content="multi-filtering, react, vite, web application" />
+    <meta name="author" content="Gunnar Miklis" />
+    <title>Filter Coffee</title>
   </head>
   <body>
     <div id="root"></div>
